<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_product_heading"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="@dimen/heading_text_size"
        android:layout_margin="@dimen/safe_margin"/>

    <EditText
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/product_name_hint"
        android:layout_marginHorizontal="@dimen/safe_margin"/>

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price_field_hint"
        android:inputType="number"
        android:layout_marginHorizontal="@dimen/safe_margin"/>

    <EditText
        android:id="@+id/productQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity_field_hint"
        android:inputType="number"
        android:layout_marginHorizontal="@dimen/safe_margin"/>

    <EditText
        android:id="@+id/productSupplierName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_name_hint"
        android:layout_marginHorizontal="@dimen/safe_margin"/>

    <EditText
        android:id="@+id/productSupplierPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/supplier_phone_number_hint"
        android:inputType="phone"
        android:layout_marginHorizontal="@dimen/safe_margin"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/safe_margin"
        android:padding="@dimen/button_padding"
        android:text="@string/submit_button_text"/>

</LinearLayout>